# GameBoyEmulator

./: .gitignore  CMakeLists.txt
include/: Cartridge.hpp  Platform.hpp  Processor.hpp
src/: Cartridge.cpp  Main.cpp  Platform.cpp  Processor.cpp
tests/: CMakeLists.txt  tests.cpp
